compiler/testData/diagnostics/tests/annotations/InheritingAnnotationClass.kt
annotation class AnnKlass

class Child : <!FINAL_SUPERTYPE, SUPERTYPE_NOT_INITIALIZED!>AnnKlass<!>
